# greeter

./: CLAUDE.md  Cargo.toml  greeter.toml.example
src/: config.rs  greetd.rs  main.rs  sessions.rs  theme.rs  users.rs
